--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.yarn
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
